Make root README the repository owner map